--- a/.github/workflows/azurewebapi20241013003604.yml
+++ b/.github/workflows/azurewebapi20241013003604.yml
@@ -31,6 +31,12 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
+          
+
+
+
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -40,6 +46,8 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+    - name: Azure Login
+      uses: Azure/login@v2.2.0            
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
